--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -7,6 +7,8 @@ navbar:
     href: index.html
   - text: About
     href: about.html
+  - text: Lithic Analysis
+    href: lithic_overview.html
   - text: License
     href: license.html
 output:
